variables.Variables.scala.error
Compilation error:
Variables:2: error: not found: type int
var stepamount: int = 0 
                ^Variables:5: error: not found: value stepAmount
{forward(); stepAmount = stepAmount+1 }
            ^Variables:9: error: not found: value stepAmount
for (n <- 0 to stepAmount)
               ^Variables:10: error: not found: value dropBack
{dropBack();}
 ^